added ability to go forward and back on drinks from API that are returned

--- a/class26-materials/class26-materials/objects-shots/index.html
+++ b/class26-materials/class26-materials/objects-shots/index.html
@@ -15,11 +15,16 @@
 
 		<h1>Which Cocktail?</h1>
 		<input type="text" name="" value="">
-		<button type="button" name="button">Get Cocktail</button>
+		<button id="search" type="button" name="button">Get Cocktail</button>
+		<button class='hidden' id='back' type="button" name="next">Previous</button>
+		<button class='' id='next'type= "button" name="next">Next</button>
 
 		<h2>Name</h2>
 		<img src="" alt="">
+		<p>Instructions<p>
 		<h3>Instructions</h3>
+
+
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
