added card game api work and local storage

--- a/class27-materials/class27-materials/card-game/index.html
+++ b/class27-materials/class27-materials/card-game/index.html
@@ -12,8 +12,19 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<h1>Score: </h1>
-		<button>Anotha one</button>
+	
+	
+	<h1>Card Game</h1>
+	<button>Deal cards</button>
+	<h2>Player 1</h2>
+	<img class='hidden' id="player1" src="" alt="playing card">
+	<h2>Player 2</h2>
+	<img class='hidden' id="player2" src="" alt="playing card">
+
+	<h3></h3>
+
+	
+		
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
