--- a/class27-materials/class27-materials/api-template/index.html
+++ b/class27-materials/class27-materials/api-template/index.html
@@ -13,13 +13,16 @@
 	</head>
 	<body>
 
-		<h1>Which Pokemon?</h1>
-		<input type="text" name="" value="">
-		<button type="button" name="button">Get Pokemon</button>
+		<h1>Picture of The Day</h1>
+		<input type="date" name="" value="">
+		<button type="button" name="button">Get Media</button>
 
-		<h2>Name?</h2>
-		<img src="img/pokemon.jpeg" alt="">
-		<h3>Type?</h3>
+		<h2>Nasa Rules</h2>
+		<img src="" alt="">
+		<iframe src="" frameborder = '0'></iframe>
+
+		<h3>Explanation</h3>
+		
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
