--- a/class27-materials/class27-materials/starWars-api/index.html
+++ b/class27-materials/class27-materials/starWars-api/index.html
@@ -14,6 +14,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;800&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/34facd01e8.js" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="js/main.js" defer></script>
 	</head>
 	<body>
 		<div id="wrapper">
@@ -61,6 +62,7 @@
 					<div class = 'infocontainer'>
 						<i class="fa-solid fa-film fa-2xl" style="color: #000000;" aria-hidden="true" title="Films"></i><span class="sr-only">Character films</span>
 						<ul  id="charFilms">
+							
 							<!--Char films API data entry point-->
 						</ul>
 					</div>
@@ -72,6 +74,6 @@
 
 		</div>
 
-		<script type="text/javascript" src="js/main.js"></script>
+		
 	</body>
 </html>
