--- a/class27-materials/class27-materials/starWars-api/index.html
+++ b/class27-materials/class27-materials/starWars-api/index.html
@@ -4,7 +4,7 @@
     	<meta charset="utf-8">
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
-
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<title>Title in the tab</title>
 
 		<!-- external CSS link -->
