pokedex project added with image centered as well as split sections and js to add all items from api with the exception of pokemon moveset

--- a/class29-materials/class29-materials/rainbow-badge/index.html
+++ b/class29-materials/class29-materials/rainbow-badge/index.html
@@ -4,6 +4,7 @@
     	<meta charset="utf-8">
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
+		<link rel="stylesheet" href="./css/main.css">
 
 		<title>Title in the tab</title>
 
@@ -13,14 +14,9 @@
 	</head>
 	<body>
 
-		<h1>Which Pokemon?</h1>
-		<input id='poke1' type="text" name="" value="">
-		<input id='poke2' type="text" name="">
-		<button type="button" name="button">Check Types</button>
+		<div id="wrapper">
 
-		<img id='pokeImg1' src="" alt="">
-		<h2>Result</h2>
-		<img id='pokeImg2' src="" alt="">
+		</div>
 		
 
 		<script type="text/javascript" src="js/main.js"></script>
